# codestorm-preeliminar

./: .gitignore  .replit  =4.2  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  README.md  agents_generators.py  agents_utils.py  api_simple.py  app.py  app.py.bak  app_test.py  asistente_completo.py  asistente_simple.py  codestorm_app.py  constructor_routes.py  diagnostic_routes.py  document_loader.py  document_routes.py  download_routes.py  file_explorer.py  file_explorer_routes.py  fix_app.py  github_repo_manager.py  github_routes.py  informe_progreso.md  instruccion_ejemplo.txt  main.py  main_completo.py  models.py  old_function.txt  package-lock.json  package.json  project_analyzer.py  pyproject.toml  routes_analyzer.py  simple_app.py  simple_test.py  temp_function.py  (+4 more)
attached_assets/: CodeCorrectionModal.tsx  Pasted--Bienvenido-al-chat-especializado-de-CODESTORM-Est-s-hablando-con-el-Agente-de-Desarrollo-un-exper-1745259117875.txt  Pasted--Bienvenido-al-chat-especializado-de-CODESTORM-Est-s-hablando-con-el-Agente-de-Desarrollo-un-exper-1745260582537.txt  Pasted--DOCTYPE-html-html-lang-es-head-meta-charset-UTF-8-meta-name-viewport-con-1745379186727.txt  Pasted--Explorer-Cargando-archivos-para-ruta-files-906-Explorer-Archivos-cargados-3-elementos-6files-1745412016958.txt  Pasted--Inicializar-interfaz-cuando-el-DOM-est-listo-document-addEventListener-DOMContentLoaded-func-1745462163916.txt  Pasted--Initialize-global-app-object-if-it-doesn-t-exist-window-app-window-app-window-app-chat-1745460173489.txt  ai.ts  chat.html  constructor.html  editor.html  files.html  openai.ts  (+18 more)
(+40 files in other folders)
